Fixed menu on mobile.

--- a/menu.css
+++ b/menu.css
@@ -5,7 +5,7 @@
     right:  0;
     height:  225px;
     padding:  20px;
-    width: 100%;
+    max-width: 100%;
     transition:  top 150ms cubic-bezier(0.17, 0.04, 0.03, 0.94);
     overflow:  hidden;
     box-sizing:  border-box;
